--- a/Projeto individual/site/Portifolio.html
+++ b/Projeto individual/site/Portifolio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Portifólio</title>
+        <title>Felippe Ribeiro Portifólio</title>
     </head>
     <body>
         <header class="header-container">
@@ -21,24 +21,24 @@
                     <nav class="menu-items">
                         <ul>
                             <li>
-                                <a href="b">home</a>
+                                <a href="">home</a>
                             </li>
                             <li>
-                                <a href="b">Contato</a>
+                                <a href="">Contato</a>
                             </li>
                             <li>
-                                <a href="b">e-mail</a>
+                                <a href="">e-mail</a>
                             </li>
                         </ul>
                     </nav>
                    </div>
                </div>
             </div>
-            <h1>Felippe Ribeiro</h1>
+            <h1>Felippe Ribeiro Portifólio</h1>
             <h2>Full Stack jr.</h2>
             <div class="social-media">
-                <a href="a">Instagram</a>
-                <a href="a">Linkedin</a>
+                <a href="">Instagram</a>
+                <a href="">Linkedin</a>
             </div>
         </header>
         <main class="container">
